--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <!-- Add Spring Boot parent -->
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.7.5</version>
+        <relativePath/>
+    </parent>
+
     <groupId>com.example</groupId>
     <artifactId>employee-department-soa</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -12,10 +20,15 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <cxf.version>3.5.5</cxf.version>
-        <spring.version>5.3.20</spring.version>
     </properties>
 
     <dependencies>
+        <!-- Add Spring Boot starter -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-frontend-jaxws</artifactId>
@@ -25,16 +38,6 @@
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-transports-http</artifactId>
             <version>${cxf.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -61,11 +64,11 @@
                             <sourceRoot>${project.build.directory}/generated-sources/xjc</sourceRoot>
                             <xsdOptions>
                                 <xsdOption>
-                                    <xsd>${project.basedir}/employee-department-soa/src/main/resources/xsd/employee.xsd</xsd>
+                                    <xsd>${project.basedir}/src/main/resources/xsd/employee.xsd</xsd>
                                     <packagename>com.example.model.employee</packagename>
                                 </xsdOption>
                                 <xsdOption>
-                                    <xsd>${project.basedir}/employee-department-soa/src/main/resources/xsd/department.xsd</xsd>
+                                    <xsd>${project.basedir}/src/main/resources/xsd/department.xsd</xsd>
                                     <packagename>com.example.model.department</packagename>
                                 </xsdOption>
                             </xsdOptions>
@@ -73,7 +76,14 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.example.Application</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
-        <sourceDirectory>${project.build.directory}/generated-sources/xjc</sourceDirectory>
     </build>
 </project>
